code-samples/example-07-ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex07-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ex07-app
  template:
    metadata:
      labels:
        app: ex07-app
    spec:
      containers:
      - name: ex07-nginx-container
        image: registry.redhat.io/ubi8/nginx-120
        command: ["nginx"]
        args: ["-g", "daemon off;"]
        volumeMounts:
        - name: wwwdata-volume
          mountPath: /opt/app-root/src
        ports:
        - name: http-default
          containerPort: 8080
      volumes:
      - name: wwwdata-volume
        configMap:
          name: ex07-config
