code-samples/example-07-ingress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ex07-service
spec:
  selector:
    app: ex07-app
  ports:
    - name: web
      port: 80
      targetPort: http-default
