code-samples/example-07-ingress/ex07c-ingress-annotated.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ex07c-ingress-annotated
  annotations:
    haproxy.router.openshift.io/disable_cookies: "true"
    haproxy.router.openshift.io/rewrite-target: "/"
    # full list of available annotations:
    # https://docs.openshift.com/container-platform/4.11/networking/routes/route-configuration.html#nw-route-specific-annotations_route-configuration
spec:
  rules:
  - host: ex07c.salesdemo.ocpqa.apa.net
    http:
      paths:
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: ex07-service
            port:
              name: web
  tls:
  - {}    # use default cert (OpenShift specific syntax)
